datepicker: set z-index directly before show via css if input is not in a dialog, fixes #9915

--- a/resources/assets/stylesheets/less/jquery-ui/studip.less
+++ b/resources/assets/stylesheets/less/jquery-ui/studip.less
@@ -153,10 +153,6 @@ textarea.ui-resizable-handle.ui-resizable-s {
 }
 
 // Date picker
-.ui-datepicker {
-    z-index: 1002 !important;
-}
-
 .ui-datepicker-header .ui-icon {
     background-image: url(../images/vendor/jquery-ui/ui-icons_ffffff_256x240.png);
 }
